# gnu_linux_2024

01_TerminalProject/: Show.c
02_Multifile/: Makefile  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  gdb_1  gdb_2  gdb_2_gold.txt  range.c
05_Regexps/: Makefile  esub.c
06_Tracing/: makefile  move.c  remove.c
07_Environmental/: Makefile.am  configure.ac  rhasher.c
08_I18n/: Makefile.am  configure.ac
08_I18n/po/: guess.pot  ru.po
08_I18n/src/: guess.c
09_PatchDiff/: Makefile  create_lab0.c  patch1.patch  patch2.patch  patch3.patch
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am  buf.h
10_LibTesting/tests/: Makefile.am  grow_test.c  init_test.c  null_test.c  pop_test.c  push_test.c
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac
11_Documenting/po/: Makefile.am  guess.pot  ru.po
11_Documenting/src/: Makefile.am  guess.c
12_InstallPackaging/: Makefile  Makefile.am  configure.ac
12_InstallPackaging/sh/: install.sh  uninstall.sh
12_InstallPackaging/src/: Makefile.am  guess.c  guess.h  guess.pot  main.c  ru.po  tests.c
